# computer_vision

./: .gitignore  CMakeLists.txt  README.md  detect.py  infer.cpp  infer.py  requirements.txt  test_mnist.py  train.py  train_mnist.cpp  train_mnist.py  yolo_detect.py
